# ansiblecheck-cli

./: .gitignore  .travis.yml  LICENSE  README.md  ansiblecheck.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
