name:                ansiblecheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davenport-haskell/ansiblecheck-cli
license:             BSD3
license-file:        LICENSE
author:              Christopher Davenport
maintainer:          Chris@ChristopherDavenport.tech
copyright:           2017 Christopher Davenport
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ansiblecheck-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansiblecheck
                     , optparse-applicative >= 0.2.0   && < 0.14
                     , text                               < 1.3
                     , process              >= 1.4.3   && < 1.5
                     , directory            >= 1.3.0   && < 1.4
                     , ansi-terminal        >= 0.6.2.3 && < 0.6.3
  default-language:    Haskell2010

test-suite ansiblecheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ansiblecheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davenport-haskell/ansiblecheck
